fixed spelling errors that caused images to not load

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <span class="itemcount">Posted on Saturday 10/28/2017</span>
   </h3>
 
-  <img src="images\Pigwidgeon.jpg" class="otheractivefriends">
+  <img src="images\pigwidgeon.jpg" class="otheractivefriends">
 
   <h3 class="activefriendusers">
     Pigwidgeon
@@ -144,7 +144,7 @@
 
    <div class="newestpost">
 
-     <img src="images\Hermes.jpg" class="friendpostpic">
+     <img src="images\hermes.jpg" class="friendpostpic">
 
      <h3 class="friendpostuser">
        Hermes
@@ -258,7 +258,7 @@
 
   <div class="postcomment2">
 
-   <img src="images\Errol.jpg" class="friendcommentpic2">
+   <img src="images\errol.jpg" class="friendcommentpic2">
 
    <div class="commentusername">
 
